--- a/index.html
+++ b/index.html
@@ -1,395 +1,170 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>馥靈之鑰｜內在GPS 線上抽牌</title>
-<link rel="icon" href="favicon.ico" />
-<style>
-  :root{
-    --milk:#f9f5f0; --cocoa:#6b4f3e;
-    --rose:#cda86e; --rose-dark:#a88257;
-    --ink:#2a2a2a; --line:rgba(0,0,0,.08);
-  }
-  *{box-sizing:border-box}
-  html,body{margin:0;padding:0}
-  body{
-    background: url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed no-repeat;
-    font-family: "Noto Sans TC","PingFang TC","Arial",sans-serif;
-    color: var(--ink);
-  }
-
-  .wrap{ max-width:1080px; margin:0 auto; padding:24px 16px 60px; }
-  .glass{
-    background: rgba(255,255,255,.9);
-    backdrop-filter: blur(6px) saturate(120%);
-    border: 1px solid var(--line);
-    border-radius: 16px;
-    box-shadow: 0 8px 28px rgba(0,0,0,.18);
-    padding: 22px;
-    margin: 0 auto 14px;
-  }
-
-  /* 標題 */
-  .page-title{ text-align:center; margin: 8px auto 14px; }
-  .page-title h1{
-    margin:0; font-size:2rem; color:var(--cocoa); letter-spacing:.5px;
-  }
-  .page-title p{ margin:8px 0 0; color:var(--rose-dark); font-weight:700; }
-
-  /* 抽牌模式 ＋ 價格表 */
-  .modes{ display:grid; grid-template-columns: 1.05fr .95fr; gap:16px; }
-  @media(max-width: 900px){ .modes{ grid-template-columns: 1fr; } }
-
-  .mode-buttons{
-    display:grid; grid-template-columns: repeat(4, 1fr); gap:12px;
-  }
-  @media(max-width:900px){ .mode-buttons{ grid-template-columns: repeat(3, 1fr); } }
-  @media(max-width:560px){ .mode-buttons{ grid-template-columns: repeat(2, 1fr); } }
-
-  .btn{
-    appearance:none; border:none; cursor:pointer;
-    padding:16px 14px; border-radius:14px;
-    background: linear-gradient(135deg, var(--rose), var(--rose-dark));
-    color:#fff; font-weight:900; letter-spacing:.5px; font-size:18px;
-    line-height:1.15; text-align:center;
-    box-shadow: 0 8px 20px rgba(0,0,0,.18);
-    transition: .25s;
-  }
-  .btn:hover{ transform: translateY(-2px); filter: brightness(1.06); }
-  .btn.secondary{
-    background:#fff; color:var(--cocoa); border:1.8px solid var(--cocoa);
-    box-shadow: none;
-  }
-
-  .price-table{ border-radius:14px; overflow:hidden; border:1px solid var(--line); }
-  table{ width:100%; border-collapse:collapse; }
-  th,td{ padding:12px 10px; text-align:center; }
-  thead th{ background:#fff2e0; color:#6b4f3e; }
-  tbody tr:nth-child(odd){ background:#fff; }
-  tbody tr:nth-child(even){ background:#fff8f0; }
-  td:first-child{ font-weight:800; color:var(--cocoa); }
-
-  /* 折疊說明 */
-  details{
-    border: 1px solid var(--line);
-    border-radius: 12px; padding: 0 12px;
-    background: rgba(255,255,255,.9);
-    margin: 10px 0;
-  }
-  summary{
-    cursor: pointer; list-style: none; padding: 12px 0;
-    font-weight: 800; color: var(--rose-dark);
-  }
-  summary::-webkit-details-marker{ display:none; }
-
-  /* 方案卡（30/90天） */
-  .plans{ display:grid; grid-template-columns:1fr 1fr; gap:14px; }
-  @media(max-width:900px){ .plans{ grid-template-columns:1fr; } }
-  .plan{
-    background:#fff; border:1px solid var(--line); border-radius:14px; padding:18px;
-    box-shadow:0 8px 22px rgba(0,0,0,.12); text-align:center;
-  }
-  .plan .ttl{ font-weight:900; color:#6b4f3e; font-size:20px; }
-  .plan .price{ margin-top:6px; color:#a88257; font-weight:800; }
-  .plan ul{ text-align:left; margin:12px auto 10px; line-height:1.75; max-width:520px; }
-  .ctaA{
-    display:inline-block; text-decoration:none; color:#fff; font-weight:900;
-    background: linear-gradient(135deg,#cda86e,#a88257); padding:12px 20px; border-radius:26px;
-    box-shadow:0 6px 16px rgba(0,0,0,.18);
-  }
-  .ctaA:hover{ filter:brightness(1.06); transform:translateY(-2px); }
-
-  /* 結果區（完整顯示卡圖：不再裁切） */
-  .toolbar{
-    display:flex; flex-wrap:wrap; gap:10px; align-items:center; justify-content:center;
-    margin: 12px 0 8px;
-  }
-  .hint{ text-align:center; color:#666; font-size: 14px; margin: 6px 0 12px; }
-
-  .grid{ display:grid; gap:14px; margin-top:6px; grid-template-columns: repeat(5, 1fr); }
-  @media(max-width:1000px){ .grid{ grid-template-columns: repeat(4,1fr); } }
-  @media(max-width:800px){ .grid{ grid-template-columns: repeat(3,1fr); } }
-  @media(max-width:560px){ .grid{ grid-template-columns: repeat(2,1fr); } }
-
-  .card{
-    background:#fff; border:1px solid var(--line);
-    border-radius: 12px; overflow:hidden;
-    box-shadow: 0 6px 18px rgba(0,0,0,.12);
-  }
-
-  /* 🔧 關鍵修正：完整顯示不裁切 */
-  .thumb{
-    display:block;
-    width:100%;
-    height:auto;              /* 等比縮放，不固定高 */
-    object-fit:contain;       /* 保證完整顯示 */
-    background:#fff;          /* 透明邊緣不會變暗 */
-  }
-
-  .cap{
-    padding: 8px 10px; text-align:center; font-weight: 800; color: var(--cocoa);
-    background: #fff7ed; border-top: 1px solid var(--line);
-  }
-
-  /* 底部資訊（白底深字） */
-  .footer{
-    margin-top: 18px; text-align:center;
-  }
-  .footer .block{
-    background:#ffffff; border:1px solid var(--line); border-radius:12px; padding:12px;
-    color:#4a3a2f; font-size:13px; line-height:1.7;
-  }
-  .link{
-    display:inline-block; text-decoration:none; color:#fff; font-weight:800;
-    background: linear-gradient(135deg, var(--rose), var(--rose-dark));
-    padding: 10px 16px; border-radius: 22px; box-shadow: 0 4px 12px rgba(0,0,0,.18);
-    margin-top:8px;
-  }
-  .link:hover{ filter: brightness(1.05); transform: translateY(-2px); }
-  .note{ color:#a88257; font-weight:700; }
-</style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>馥靈之鑰｜7日情緒紓解挑戰</title>
+  <meta name="description" content="七天看得見的情緒變化：每天10分鐘，香氣×文字×小行動，讓生活回到你手上。">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Fallback fonts only; no external calls to keep file portable */
+  </style>
+  <script>
+    // 👉 改這裡即可：等綠界金流審核通過，把下面三條連結換成你的 ECPay 收款連結
+    // 目前預設改為 LINE 官方帳號，確保上線即可收單（人工回覆）
+    window.LINKS = {
+      PAY_299: "https://line.me/ti/p/ExZKz8O2eh",
+      PAY_36K: "https://line.me/ti/p/ExZKz8O2eh",
+      PAY_88K: "https://line.me/ti/p/ExZKz8O2eh",
+      LINE: "https://line.me/ti/p/ExZKz8O2eh"
+    };
+    document.addEventListener('DOMContentLoaded', function() {
+      document.querySelectorAll('[data-link]').forEach(function(a) {
+        var key = a.getAttribute('data-link');
+        if (window.LINKS[key]) {
+          a.setAttribute('href', window.LINKS[key]);
+        }
+      });
+    });
+  </script>
 </head>
 <body>
-  <div class="wrap">
-    <div class="glass page-title">
-      <h1>馥靈之鑰｜內在GPS 線上抽牌</h1>
-      <p>130 張牌卡 × HOUR 四步，<span class="note">它不是算命，是日常微調器</span>。</p>
-    </div>
-
-    <div class="modes">
-      <!-- 左：抽牌按鈕（加大） -->
-      <div class="glass">
-        <h3 style="text-align:center;margin:0 0 10px;color:#6b4f3e;">選擇抽牌張數</h3>
-        <div class="mode-buttons">
-          <button class="btn" data-n="1">抽 1 張</button>
-          <button class="btn" data-n="3">抽 3 張</button>
-          <button class="btn" data-n="5">抽 5 張</button>
-          <button class="btn" data-n="7">抽 7 張</button>
-          <button class="btn" data-n="9">抽 9 張</button>
-          <button class="btn" data-n="12">抽 12 張</button>
-          <button class="btn" data-n="15">抽 15 張</button>
-          <button class="btn secondary" id="clearBtn">清除重抽</button>
+  <header class="hero">
+    <div class="wrap">
+      <div class="brand">
+        <div class="logo" aria-hidden="true">HL</div>
+        <div class="brand-text">
+          <strong>馥靈之鑰®</strong>
+          <span>情緒紓解 × 能量調頻 × 壓力管理</span>
         </div>
       </div>
+      <h1>七天看得見的情緒變化</h1>
+      <p class="sub">每天 10 分鐘，香氣 × 文字 × 小行動，讓生活回到你手上</p>
+      <div class="cta">
+        <a class="btn primary" data-link="PAY_299" aria-label="加入7日挑戰（NT$299）">加入 7 日挑戰（NT$299）</a>
+        <a class="btn outline" data-link="LINE" aria-label="加官方帳號諮詢">加官方帳號諮詢</a>
+      </div>
+      <ul class="trust">
+        <li>固定晚上 <b>21:00</b> 發佈</li>
+        <li>第 7 晚直播示範（回放 72 小時）</li>
+        <li>每梯限額 <b>120</b> 位</li>
+      </ul>
+    </div>
+  </header>
 
-      <!-- 右：價格表 -->
-      <div class="glass">
-        <h3 style="text-align:center;margin:0 0 10px;color:#6b4f3e;">價格一覽（參考，可客製）</h3>
-        <div class="price-table">
-          <table>
-            <thead>
-              <tr><th>張數</th><th>價格（NT$）</th><th>用途速記</th></tr>
-            </thead>
-            <tbody>
-              <tr><td>1 張</td><td>300</td><td>此刻訊息、快對焦</td></tr>
-              <tr><td>3 張</td><td>600</td><td>過去×現在×未來</td></tr>
-              <tr><td>5 張</td><td>900</td><td>卡點掃描＋對策</td></tr>
-              <tr><td>7 張</td><td>1,200</td><td>結構深掃（如七構面）</td></tr>
-              <tr><td>9 張</td><td>1,500</td><td>藍圖地圖、整體布局</td></tr>
-              <tr><td>12 張</td><td>1,800</td><td>年度節奏、月主題</td></tr>
-              <tr><td>15 張</td><td>2,200</td><td>完整藍圖＋行動路線</td></tr>
-            </tbody>
-          </table>
-        </div>
+  <section class="why wrap">
+    <h2>為什麼做得到？</h2>
+    <p>我們把香氣、圖像與文字做成可重複的 HOUR 四步：<b>校準 → 辨識 → 解鎖 → 行動</b>。你不需要背理論，只要每天 10 分鐘，照步驟做，就能把一天的節奏拉回來。</p>
+    <div class="pill-row">
+      <span class="pill">更穩（心不亂）</span>
+      <span class="pill">更清（界線清）</span>
+      <span class="pill">更敢（行動敢）</span>
+    </div>
+  </section>
+
+  <section class="who wrap">
+    <h2>誰適合參加</h2>
+    <ul class="bullets">
+      <li>白天扛住一切、夜裡腦內小劇場停不下來的你</li>
+      <li>美業／芳療／教練與個人工作者：想把關懷做成可收費服務</li>
+      <li>想讓每天更有序、更可控的人：先從 10 分鐘開始</li>
+    </ul>
+  </section>
+
+  <section class="get wrap">
+    <h2>你會得到</h2>
+    <div class="grid">
+      <div class="card"><h3>AI 指引卡</h3><p>每日 1 張圖像＋一句提示</p></div>
+      <div class="card"><h3>香氣文字引導</h3><p>把注意力拉回中心</p></div>
+      <div class="card"><h3>3 分鐘小行動</h3><p>呼吸／伸展／步行／水分</p></div>
+      <div class="card"><h3>第 7 晚直播</h3><p>現場示範與 Q&A（回放 72 小時）</p></div>
+    </div>
+  </section>
+
+  <section class="days wrap">
+    <h2>7 天流程</h2>
+    <ol class="days-list">
+      <li><b>D1</b> 重新連線：呼吸 30 下；睡前 3 分鐘伸展</li>
+      <li><b>D2</b> 輕柔界線：把「不好意思」換成「感謝提醒，我晚點回你」</li>
+      <li><b>D3</b> 身體雷達：找出最緊一點，手心覆蓋 60 秒；喝 500ml 溫水</li>
+      <li><b>D4</b> 把霧變成字：我現在是（焦慮／煩躁／擔心／空空的）</li>
+      <li><b>D5</b> 最小行動：完成一件可見成果（折衣、清桌面）</li>
+      <li><b>D6</b> 關係一句話：發「謝謝你今天出現」給某人</li>
+      <li><b>D7</b> 整合＋直播：選出最有用的一步；90 分鐘直播示範</li>
+    </ol>
+  </section>
+
+  <section class="social-proof wrap">
+    <h2>學員回饋</h2>
+    <ul class="quotes">
+      <li>「睡前腦內雜音變小，早上比較能準時起床了。」</li>
+      <li>「客人反而主動問：下次什麼時候再約？」</li>
+      <li>「我不再追求完美，只做得成那一小步。」</li>
+    </ul>
+  </section>
+
+  <section class="pricing wrap">
+    <h2>報名與升級</h2>
+    <div class="grid three">
+      <div class="card tall">
+        <h3>7 日挑戰</h3>
+        <p class="price">NT$299</p>
+        <a class="btn primary block" data-link="PAY_299" aria-label="加入7日挑戰">立即加入</a>
+        <p class="note">付款連結未開通前，將以 LINE 報名；開通後改為信用卡付款。</p>
+      </div>
+      <div class="card tall">
+        <h3>自己用工具</h3>
+        <p class="price">NT$36,000 / 年</p>
+        <ul class="mini">
+          <li>AI 抽卡權限</li>
+          <li>每月共學 1 次</li>
+          <li>教材持續更新</li>
+        </ul>
+        <a class="btn outline block" data-link="PAY_36K">升級了解</a>
+      </div>
+      <div class="card tall">
+        <h3>專業服務</h3>
+        <p class="price">NT$88,000 / 年</p>
+        <ul class="mini">
+          <li>含「自己用工具」全部</li>
+          <li>服務教案與話術</li>
+          <li>收益共享機制資格</li>
+        </ul>
+        <a class="btn outline block" data-link="PAY_88K">升級了解</a>
       </div>
     </div>
+    <p class="hint">高價方案每月限 <b>11</b> 位；前 11 名加贈 45 分鐘個別梳理（30 天內使用）。</p>
+  </section>
 
-    <!-- 說明 -->
-    <div class="glass" style="margin-top:10px;">
-      <h3 style="text-align:center;margin:0 0 12px;color:#6b4f3e;">抽多少？看這裡（用途 × 問法示例）</h3>
-
-      <details open>
-        <summary>1 張｜即時訊息 × 快速對焦</summary>
-        <ul>
-          <li>今日關鍵提醒 / 當下情緒訊號</li>
-          <li>身體的小聲告白、關係溫度計</li>
-          <li>快問快答：現在最適合的行動是？</li>
-        </ul>
-      </details>
-
-      <details>
-        <summary>3 張｜過去・現在・未來 能量流</summary>
-        <ul>
-          <li>事件源頭 × 現況 × 走向</li>
-          <li>職涯或感情的節拍方向</li>
-          <li>轉型卡點與最近的轉機在哪？</li>
-        </ul>
-      </details>
-
-      <details>
-        <summary>5 張｜卡點掃描 × 行動解方</summary>
-        <ul>
-          <li>金錢 / 關係卡住的根因</li>
-          <li>下一步要做什麼、資源從哪來</li>
-          <li>五構面觀照：生理・情緒・人際・習慣・意念</li>
-        </ul>
-      </details>
-
-      <details>
-        <summary>7 張｜深層結構掃描</summary>
-        <ul>
-          <li>七大構面平衡與能量分配</li>
-          <li>情緒釋放七步驟</li>
-          <li>顯性／隱性驅動力一次看清</li>
-        </ul>
-      </details>
-
-      <details>
-        <summary>9 張｜藍圖地圖（整體布局）</summary>
-        <ul>
-          <li>內在 × 外在 × 系統資源盤點</li>
-          <li>九宮格行動策展、節奏快慢配置</li>
-          <li>月運／季運趨勢總覽</li>
-        </ul>
-      </details>
-
-      <details>
-        <summary>12 張｜年度規劃 × 能量重整</summary>
-        <ul>
-          <li>12 個月主題導航、每月關鍵字</li>
-          <li>12 面向平衡盤點、重點任務排序</li>
-          <li>月相週期追蹤（節奏管理）</li>
-        </ul>
-      </details>
-
-      <details>
-        <summary>15 張｜完整藍圖 Ultimate</summary>
-        <ul>
-          <li>原型特質 × 核心課題 × 盲點</li>
-          <li>祝福訊息 × 行動清單</li>
-          <li>30–90 天整合路線圖</li>
-        </ul>
-      </details>
-    </div>
-
-    <!-- 兩個升級方案卡 -->
-    <div class="glass">
-      <h3 style="text-align:center;margin:0 0 12px;color:#6b4f3e;">升級你的節奏 · 兩款藍圖計畫</h3>
-      <div class="plans">
-        <div class="plan">
-          <div class="ttl">30 天富命計畫</div>
-          <div class="price">NT$ 6,800</div>
-          <ul>
-            <li>每週 1 次節奏校準（線上）</li>
-            <li>專屬行動清單 × 日常提醒腳本</li>
-            <li>牌卡重點標記 × 氣味建議 × 指尖節奏小任務</li>
-          </ul>
-          <a class="ctaA" href="plan30.html">📅 看 30 天計畫</a>
-        </div>
-        <div class="plan">
-          <div class="ttl">90 天豐盛之境藍圖</div>
-          <div class="price">NT$ 20,000</div>
-          <ul>
-            <li>HOUR × LIGHT：聚焦／架構／放大／穩固</li>
-            <li>每週節奏回顧 × 指標追蹤（客單／轉換／能量）</li>
-            <li>專屬藍圖手冊（PDF）＋ 行動里程碑檢核</li>
-          </ul>
-          <a class="ctaA" href="abundance.html">📜 了解 90 天計畫</a>
-        </div>
+  <section class="contact wrap">
+    <h2>聯繫與地址（預約制）</h2>
+    <div class="grid two">
+      <div class="card light">
+        <h3>線上客服</h3>
+        <p>LINE 官方帳號：<a data-link="LINE">點我加入</a></p>
+        <p>（加好友後輸入：<b>我要報名 7 日挑戰</b>）</p>
+      </div>
+      <div class="card light">
+        <h3>實體據點</h3>
+        <p>桃園｜桃園市桃園區同安街 666 號</p>
+        <p>高雄｜前鎮區瑞祥街 1 巷 35 號</p>
+        <p class="small">到訪請先預約，避免撲空。</p>
       </div>
     </div>
+  </section>
 
-    <!-- 工具列與抽牌結果 -->
-    <div class="glass">
-      <div class="toolbar">
-        <button class="btn secondary" id="copyBtn">📋 複製卡號</button>
-        <a class="btn" href="https://lin.ee/vpbLhNjF" target="_blank" rel="noopener">🌿 LINE 預約</a>
-      </div>
-      <div class="hint">抽牌後下方會顯示卡圖與卡號（A00–A21 / 001–108）。</div>
-      <div id="grid" class="grid"></div>
+  <section class="cta2">
+    <div class="wrap">
+      <a class="btn primary big" data-link="PAY_299">加入 7 日挑戰（NT$299）</a>
+      <p class="subtle">或先加官方帳號詢問：<a data-link="LINE">點我</a></p>
     </div>
+  </section>
 
-    <!-- 底部 -->
-    <div class="footer">
-      <div class="block">
-        桃園市桃園區同安街 666 號 1樓（或線上服務）｜ LINE ID：judyanee ｜ Email：judyanee@gmail.com ｜ 0905-723-595<br/>
-        ※ 本頁內容僅供壓力管理、情緒紓解、能量調頻與日常指引參考，非醫療行為。<br/>
-        © 馥靈之鑰 Hour Light
-      </div>
-      <a class="link" href="https://hourlight.github.io/">🏠 返回首頁</a>
+  <footer class="footer">
+    <div class="wrap">
+      <p class="legal">免責：本系統與課程僅提供身心放鬆、情緒紓解、能量調頻、壓力管理等服務，非醫療行為；如有嚴重生理或心理困擾，請尋求合格醫療或心理專業人員協助。</p>
+      <p class="copyright">© 2025 馥靈之鑰 Hour Light</p>
     </div>
-  </div>
-
-<script>
-/** 圖片來源設定（若改成相對路徑，將 basePath 設為 ''） */
-const basePath = 'https://raw.githubusercontent.com/HourLight/11/main/'; // 更穩定的 raw 端點
-
-// 130 張檔名（A00–A21、001–108）
-const majors = Array.from({length:22}, (_,i)=>`A${String(i).padStart(2,'0')}.png`);
-const minors = Array.from({length:108}, (_,i)=>`${String(i+1).padStart(3,'0')}.png`);
-const allFiles = majors.concat(minors);
-
-let selected = [];
-
-// 綁定抽牌按鈕
-document.querySelectorAll('.btn[data-n]').forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    const n = Number(btn.dataset.n);
-    drawCards(n);
-  });
-});
-
-// 清除
-document.getElementById('clearBtn').addEventListener('click', ()=>{
-  selected = [];
-  render();
-  toast('已清除，請重新抽牌');
-});
-
-// 複製卡號
-document.getElementById('copyBtn').addEventListener('click', ()=>{
-  if(!selected.length){ toast('請先抽牌再複製'); return; }
-  const txt = selected.map(i=>allFiles[i].replace('.png','')).join(', ');
-  navigator.clipboard.writeText(txt).then(()=>toast('已複製：' + txt))
-  .catch(()=>alert('複製失敗，請手動：' + txt));
-});
-
-function drawCards(n){
-  if(!confirm('請閉眼深呼吸，心裡默念本次主題，再按「確定」抽牌。')) return;
-  selected = [];
-  const used = new Set();
-  while(selected.length < n){
-    const r = Math.floor(Math.random()*allFiles.length);
-    if(!used.has(r)){ used.add(r); selected.push(r); }
-  }
-  render();
-  document.getElementById('grid').scrollIntoView({behavior:'smooth', block:'start'});
-}
-
-function render(){
-  const grid = document.getElementById('grid');
-  if(!selected.length){ grid.innerHTML = ''; return; }
-  grid.innerHTML = selected.map(i=>{
-    const name = allFiles[i];
-    const code = name.replace('.png','');
-    const url  = basePath + name;
-    return `
-      <div class="card">
-        <img class="thumb" src="${url}" alt="${code}" loading="lazy" />
-        <div class="cap">編號：${code}</div>
-      </div>`;
-  }).join('');
-}
-
-// 簡易提示
-function toast(msg){
-  const t = document.createElement('div');
-  t.textContent = msg;
-  t.style.position='fixed';
-  t.style.left='50%';
-  t.style.bottom='24px';
-  t.style.transform='translateX(-50%)';
-  t.style.background='rgba(0,0,0,.8)';
-  t.style.color='#fff';
-  t.style.padding='10px 14px';
-  t.style.borderRadius='10px';
-  t.style.fontSize='14px';
-  t.style.boxShadow='0 4px 12px rgba(0,0,0,.25)';
-  t.style.zIndex='9999';
-  document.body.appendChild(t);
-  setTimeout(()=>{ t.remove(); }, 1600);
-}
-</script>
+  </footer>
 </body>
 </html>
