--- a/index.html
+++ b/index.html
@@ -3,168 +3,213 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>馥靈之鑰｜7日情緒紓解挑戰</title>
-  <meta name="description" content="七天看得見的情緒變化：每天10分鐘，香氣×文字×小行動，讓生活回到你手上。">
+  <title>馥靈之鑰｜7日情緒GPS體驗票｜透明一頁式</title>
+  <meta name="description" content="用H.O.U.R系統在7天內建立你的情緒GPS：每天10分鐘、群組陪跑、結束後提供個人化報告。安全用語＋完整交付＋合規資訊，一頁講清楚。">
   <link rel="stylesheet" href="styles.css">
-  <style>
-    /* Fallback fonts only; no external calls to keep file portable */
-  </style>
+  <style>body{font-family:-apple-system,BlinkMacSystemFont,"Noto Sans TC","Segoe UI",Arial,sans-serif}</style>
   <script>
-    // 👉 改這裡即可：等綠界金流審核通過，把下面三條連結換成你的 ECPay 收款連結
-    // 目前預設改為 LINE 官方帳號，確保上線即可收單（人工回覆）
-    window.LINKS = {
-      PAY_299: "https://line.me/ti/p/ExZKz8O2eh",
-      PAY_36K: "https://line.me/ti/p/ExZKz8O2eh",
-      PAY_88K: "https://line.me/ti/p/ExZKz8O2eh",
-      LINE: "https://line.me/ti/p/ExZKz8O2eh"
-    };
-    document.addEventListener('DOMContentLoaded', function() {
-      document.querySelectorAll('[data-link]').forEach(function(a) {
-        var key = a.getAttribute('data-link');
-        if (window.LINKS[key]) {
-          a.setAttribute('href', window.LINKS[key]);
-        }
-      });
+    // 付款連結：綠界開通後，請替換下列三行；未替換前，一律導向 LINE，避免漏單
+    window.PAY_299 = "https://line.me/ti/p/ExZKz8O2eh";   // ECPay 299
+    window.PAY_36K = "https://line.me/ti/p/ExZKz8O2eh";   // ECPay 36,000
+    window.PAY_88K = "https://line.me/ti/p/ExZKz8O2eh";   // ECPay 88,000
+    window.LINE_URL = "https://line.me/ti/p/ExZKz8O2eh";
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('[data-pay]').forEach(a => a.href = window[a.getAttribute('data-pay')] || window.LINE_URL);
+      document.querySelectorAll('[data-line]').forEach(a => a.href = window.LINE_URL);
+      document.getElementById('year').textContent = new Date().getFullYear();
     });
   </script>
 </head>
 <body>
-  <header class="hero">
-    <div class="wrap">
+  <header class="nav">
+    <div class="wrap nav-inner">
       <div class="brand">
-        <div class="logo" aria-hidden="true">HL</div>
-        <div class="brand-text">
-          <strong>馥靈之鑰®</strong>
+        <div class="logo">HL</div>
+        <div class="btxt">
+          <b>馥靈之鑰®</b>
           <span>情緒紓解 × 能量調頻 × 壓力管理</span>
         </div>
       </div>
-      <h1>七天看得見的情緒變化</h1>
-      <p class="sub">每天 10 分鐘，香氣 × 文字 × 小行動，讓生活回到你手上</p>
-      <div class="cta">
-        <a class="btn primary" data-link="PAY_299" aria-label="加入7日挑戰（NT$299）">加入 7 日挑戰（NT$299）</a>
-        <a class="btn outline" data-link="LINE" aria-label="加官方帳號諮詢">加官方帳號諮詢</a>
-      </div>
-      <ul class="trust">
-        <li>固定晚上 <b>21:00</b> 發佈</li>
-        <li>第 7 晚直播示範（回放 72 小時）</li>
-        <li>每梯限額 <b>120</b> 位</li>
-      </ul>
+      <nav class="links">
+        <a href="#why">為什麼</a>
+        <a href="#what">你會得到</a>
+        <a href="#days">流程</a>
+        <a href="#plans">方案</a>
+        <a href="#trust">合規與聯絡</a>
+      </nav>
+      <a class="btn primary sm" data-pay="PAY_299">加入 7 日體驗（NT$299）</a>
     </div>
   </header>
 
-  <section class="why wrap">
-    <h2>為什麼做得到？</h2>
-    <p>我們把香氣、圖像與文字做成可重複的 HOUR 四步：<b>校準 → 辨識 → 解鎖 → 行動</b>。你不需要背理論，只要每天 10 分鐘，照步驟做，就能把一天的節奏拉回來。</p>
-    <div class="pill-row">
-      <span class="pill">更穩（心不亂）</span>
-      <span class="pill">更清（界線清）</span>
-      <span class="pill">更敢（行動敢）</span>
-    </div>
-  </section>
-
-  <section class="who wrap">
-    <h2>誰適合參加</h2>
-    <ul class="bullets">
-      <li>白天扛住一切、夜裡腦內小劇場停不下來的你</li>
-      <li>美業／芳療／教練與個人工作者：想把關懷做成可收費服務</li>
-      <li>想讓每天更有序、更可控的人：先從 10 分鐘開始</li>
-    </ul>
-  </section>
-
-  <section class="get wrap">
-    <h2>你會得到</h2>
-    <div class="grid">
-      <div class="card"><h3>AI 指引卡</h3><p>每日 1 張圖像＋一句提示</p></div>
-      <div class="card"><h3>香氣文字引導</h3><p>把注意力拉回中心</p></div>
-      <div class="card"><h3>3 分鐘小行動</h3><p>呼吸／伸展／步行／水分</p></div>
-      <div class="card"><h3>第 7 晚直播</h3><p>現場示範與 Q&A（回放 72 小時）</p></div>
-    </div>
-  </section>
-
-  <section class="days wrap">
-    <h2>7 天流程</h2>
-    <ol class="days-list">
-      <li><b>D1</b> 重新連線：呼吸 30 下；睡前 3 分鐘伸展</li>
-      <li><b>D2</b> 輕柔界線：把「不好意思」換成「感謝提醒，我晚點回你」</li>
-      <li><b>D3</b> 身體雷達：找出最緊一點，手心覆蓋 60 秒；喝 500ml 溫水</li>
-      <li><b>D4</b> 把霧變成字：我現在是（焦慮／煩躁／擔心／空空的）</li>
-      <li><b>D5</b> 最小行動：完成一件可見成果（折衣、清桌面）</li>
-      <li><b>D6</b> 關係一句話：發「謝謝你今天出現」給某人</li>
-      <li><b>D7</b> 整合＋直播：選出最有用的一步；90 分鐘直播示範</li>
-    </ol>
-  </section>
-
-  <section class="social-proof wrap">
-    <h2>學員回饋</h2>
-    <ul class="quotes">
-      <li>「睡前腦內雜音變小，早上比較能準時起床了。」</li>
-      <li>「客人反而主動問：下次什麼時候再約？」</li>
-      <li>「我不再追求完美，只做得成那一小步。」</li>
-    </ul>
-  </section>
-
-  <section class="pricing wrap">
-    <h2>報名與升級</h2>
-    <div class="grid three">
-      <div class="card tall">
-        <h3>7 日挑戰</h3>
-        <p class="price">NT$299</p>
-        <a class="btn primary block" data-link="PAY_299" aria-label="加入7日挑戰">立即加入</a>
-        <p class="note">付款連結未開通前，將以 LINE 報名；開通後改為信用卡付款。</p>
-      </div>
-      <div class="card tall">
-        <h3>自己用工具</h3>
-        <p class="price">NT$36,000 / 年</p>
-        <ul class="mini">
-          <li>AI 抽卡權限</li>
-          <li>每月共學 1 次</li>
-          <li>教材持續更新</li>
+  <section class="hero">
+    <div class="wrap hero-grid">
+      <div class="copy">
+        <h1>7 天，把雜訊變小，讓自己穩下來</h1>
+        <p class="sub">這不是呼吸課，是一張體驗票：用 H.O.U.R 四步把資訊變系統、把練習變結果，最後交付一份《個人情緒 GPS 報告》。</p>
+        <div class="cta">
+          <a class="btn primary" data-pay="PAY_299">加入 7 日體驗（NT$299）</a>
+          <a class="btn ghost" data-line>先加 LINE 諮詢</a>
+        </div>
+        <ul class="trust">
+          <li>固定 21:00 群組任務</li>
+          <li>第 7 晚 90 分示範（回放 72 小時）</li>
+          <li>每梯限 120 位｜前 11 位加贈 mini 解讀</li>
         </ul>
-        <a class="btn outline block" data-link="PAY_36K">升級了解</a>
       </div>
-      <div class="card tall">
-        <h3>專業服務</h3>
-        <p class="price">NT$88,000 / 年</p>
-        <ul class="mini">
-          <li>含「自己用工具」全部</li>
-          <li>服務教案與話術</li>
-          <li>收益共享機制資格</li>
-        </ul>
-        <a class="btn outline block" data-link="PAY_88K">升級了解</a>
-      </div>
-    </div>
-    <p class="hint">高價方案每月限 <b>11</b> 位；前 11 名加贈 45 分鐘個別梳理（30 天內使用）。</p>
-  </section>
-
-  <section class="contact wrap">
-    <h2>聯繫與地址（預約制）</h2>
-    <div class="grid two">
-      <div class="card light">
-        <h3>線上客服</h3>
-        <p>LINE 官方帳號：<a data-link="LINE">點我加入</a></p>
-        <p>（加好友後輸入：<b>我要報名 7 日挑戰</b>）</p>
-      </div>
-      <div class="card light">
-        <h3>實體據點</h3>
-        <p>桃園｜桃園市桃園區同安街 666 號</p>
-        <p>高雄｜前鎮區瑞祥街 1 巷 35 號</p>
-        <p class="small">到訪請先預約，避免撲空。</p>
+      <div class="card">
+        <h3>H.O.U.R 四步（說人話）</h3>
+        <ol class="ol">
+          <li><b>H｜Heart reset</b>：短音訊＋3 分鐘行動，先把雜訊降下來</li>
+          <li><b>O｜Observe</b>：卡片＋文字，把「我現在怎麼了」說清楚</li>
+          <li><b>U｜Unfold</b>：把訊息翻成一句可落地的行動</li>
+          <li><b>R｜Re‑align</b>：回到現實行動表，穩穩做完</li>
+        </ol>
+        <p class="note">重點不是知道，是每天做完那 1 步。</p>
       </div>
     </div>
   </section>
 
-  <section class="cta2">
+  <section id="why" class="why">
     <div class="wrap">
-      <a class="btn primary big" data-link="PAY_299">加入 7 日挑戰（NT$299）</a>
-      <p class="subtle">或先加官方帳號詢問：<a data-link="LINE">點我</a></p>
+      <h2>為什麼不是自己做就好？</h2>
+      <div class="grid two">
+        <div class="card">
+          <h3>自己做的常見下場</h3>
+          <ul class="ul">
+            <li>第 1 天很有勁，第 3 天就停了</li>
+            <li>資訊過量，不知哪個對自己有效</li>
+            <li>沒有檢視，7 天後也說不出有什麼改變</li>
+          </ul>
+        </div>
+        <div class="card hi">
+          <h3>這張 299「體驗票」在買什麼</h3>
+          <ul class="ul">
+            <li>群組陪跑＋21:00 任務 → <b>真的做滿 7 天</b></li>
+            <li>每日卡片 × 短音訊 × 3 分鐘行動 → <b>方法小但做得完</b></li>
+            <li>第 8 天收到 <b>《個人情緒 GPS 報告》（6–10頁）</b></li>
+          </ul>
+          <p class="note">你不是買呼吸；你買的是「完成度＋報告」。</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <footer class="footer">
+  <section id="what" class="what">
     <div class="wrap">
-      <p class="legal">免責：本系統與課程僅提供身心放鬆、情緒紓解、能量調頻、壓力管理等服務，非醫療行為；如有嚴重生理或心理困擾，請尋求合格醫療或心理專業人員協助。</p>
-      <p class="copyright">© 2025 馥靈之鑰 Hour Light</p>
+      <h2>你會得到（逐條列明）</h2>
+      <div class="grid three">
+        <div class="card"><h3>每日 10 分鐘</h3><p>1 張當日卡片＋1 段 2–4 分音訊＋1 個 3 分鐘行動（呼吸/伸展/步行/補水/一句實話）。</p></div>
+        <div class="card"><h3>群組陪跑</h3><p>固定 21:00 任務與打卡，彼此見證「我今天真的做完了」。</p></div>
+        <div class="card"><h3>第 7 晚直播</h3><p>90 分示範與 Q&A；無法即時參與可於 72 小時內回看。</p></div>
+        <div class="card"><h3>個人化報告</h3><p>7 日自評曲線、觸發源地圖、有效任務 TOP3、避雷清單、下週可執行清單（5–7 項）。</p></div>
+        <div class="card"><h3>升級建議</h3><p>若你想繼續，清楚說明「自用年版 36,000」與「專業年版 88,000」的差異與選擇。</p></div>
+        <div class="card"><h3>前 11 位加碼</h3><p>贈 1 次 15 分 mini 解讀（30 天內使用）。</p></div>
+      </div>
     </div>
-  </footer>
+  </section>
+
+  <section id="days" class="days">
+    <div class="wrap">
+      <h2>7 天流程（每步做得完）</h2>
+      <ol class="ol days-ol">
+        <li><b>D1 重新連線</b>：呼吸 30 下；睡前伸展 3 分鐘</li>
+        <li><b>D2 輕柔界線</b>：把「不好意思」改成「感謝提醒，我晚點回覆」</li>
+        <li><b>D3 身體雷達</b>：手心覆蓋最緊的部位 60 秒；喝 500ml 溫水</li>
+        <li><b>D4 把霧變成字</b>：我現在是（焦慮/煩躁/擔心/空空的）</li>
+        <li><b>D5 最小行動</b>：完成一件可見成果（折衣/清桌面/寄一封信）</li>
+        <li><b>D6 關係一句話</b>：傳「謝謝你今天出現」給一個人</li>
+        <li><b>D7 整合＋直播</b>：挑出最有用的一步，放進下週行事曆；90 分示範</li>
+      </ol>
+      <p class="note">我們不追求華麗，只追求「真的做完」。</p>
+    </div>
+  </section>
+
+  <section id="plans" class="plans">
+    <div class="wrap">
+      <h2>方案與價格（透明）</h2>
+      <div class="grid three">
+        <div class="card tall">
+          <h3>7 日體驗票</h3>
+          <p class="price">NT$299</p>
+          <ul class="mini">
+            <li>每日卡片 × 短音訊 × 3 分鐘行動</li>
+            <li>群組陪跑 × 21:00 任務</li>
+            <li>第 7 晚直播（回放 72 小時）</li>
+            <li>《個人情緒 GPS 報告》</li>
+          </ul>
+          <a class="btn primary block" data-pay="PAY_299">立即加入</a>
+          <p class="tip">目前按鈕先導向 LINE；綠界通過後改為刷卡頁。</p>
+        </div>
+        <div class="card tall">
+          <h3>自用年版</h3>
+          <p class="price">NT$36,000 / 年</p>
+          <ul class="mini">
+            <li>系統使用權＋更新</li>
+            <li>每月共學 1 次</li>
+            <li>延伸任務與教材</li>
+          </ul>
+          <a class="btn ghost block" data-pay="PAY_36K">我想了解</a>
+        </div>
+        <div class="card tall">
+          <h3>專業年版</h3>
+          <p class="price">NT$88,000 / 年</p>
+          <ul class="mini">
+            <li>含自用年版全項</li>
+            <li>服務腳本、收費話術、素材包</li>
+            <li>可對外提供付費服務</li>
+          </ul>
+          <a class="btn ghost block" data-pay="PAY_88K">我想了解</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="trust" class="trust">
+    <div class="wrap">
+      <h2>我們的態度：清楚、負責、可驗證</h2>
+      <div class="grid two">
+        <div class="card">
+          <h3>交付與界線（說清楚）</h3>
+          <ul class="ul">
+            <li><b>內容包含</b>：每日卡片/音訊/行動、群組任務、第 7 晚直播、個人化報告</li>
+            <li><b>不包含</b>：醫療或心理專業服務、一對一長期諮詢（需另洽）</li>
+            <li><b>付款</b>：採綠界（信用卡/超商/ATM）；目前先以 LINE 受理</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>安心與合規（很重要）</h3>
+          <ul class="ul">
+            <li><b>用途定位</b>：僅提供身心放鬆、情緒紓解、能量調頻、壓力管理</li>
+            <li><b>免責聲明</b>：非醫療行為；若有嚴重身心困擾，請尋求合格專業協助</li>
+            <li><b>退款政策</b>：線上即時使用之數位內容，啟用後依法通常不適用七日鑑賞；重複扣款/技術異常，7 日內來信處理</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="grid two">
+        <div class="card">
+          <h3>聯絡資訊（可查）</h3>
+          <p>品牌：馥靈之鑰® Hour Light</p>
+          <p>LINE：<a data-line>https://line.me/ti/p/ExZKz8O2eh</a></p>
+          <p>Email：<a href="mailto:judyanee@gmail.com">judyanee@gmail.com</a></p>
+          <p>電話：<a href="tel:+886905723595">0905-723-595</a></p>
+          <p>地址：桃園市桃園區同安街666號｜高雄市前鎮區瑞祥街1巷35號</p>
+        </div>
+        <div class="card">
+          <h3>常見疑問（直球回答）</h3>
+          <details><summary>我自己也能做，為何要付 299？</summary><p>可以。差別在於這裡有陪跑與檢視，並在第 8 天提供一份可執行的個人化報告，讓你知道「接下來怎麼做」。</p></details>
+          <details><summary>會不會很玄？看不懂？</summary><p>不走玄語。每天只有一張卡、一段短音訊、一個 3 分鐘行動。重點是能完成，而且看得懂成果。</p></details>
+          <details><summary>會被強推高價嗎？</summary><p>第 7 晚會說明升級選項，但不關門逼單、不私訊追售。你仍然會收到完整報告。</p></details>
+        </div>
+      </div>
+
+      <p class="fine">© <span id="year"></span> 馥靈之鑰® Hour Light．僅供身心放鬆、情緒紓解、能量調頻、壓力管理之用途。</p>
+    </div>
+  </section>
+
+  <div class="float-cta">
+    <a class="btn primary" data-pay="PAY_299">加入 7 日體驗（NT$299）</a>
+    <a class="btn ghost" data-line>加 LINE 諮詢</a>
+  </div>
 </body>
 </html>
