--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>馥靈之鑰｜7日情緒GPS體驗票｜透明一頁式</title>
+  <title>馥靈之鑰｜7日情緒GPS體驗｜透明一頁式</title>
   <meta name="description" content="用H.O.U.R系統在7天內建立你的情緒GPS：每天10分鐘、群組陪跑、結束後提供個人化報告。安全用語＋完整交付＋合規資訊，一頁講清楚。">
   <link rel="stylesheet" href="styles.css">
   <style>body{font-family:-apple-system,BlinkMacSystemFont,"Noto Sans TC","Segoe UI",Arial,sans-serif}</style>
