--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
     </div>
   </section>
 
-  <div class="float-cta">
-    <a class="btn primary" data-pay="PAY_299">加入 7 日體驗（NT$299）</a>
-    <a class="btn ghost" data-line>加 LINE 諮詢</a>
-  </div>
+<div class="float-cta">
+  <a class="btn" href="https://hourlight.github.io/">了解更多</a>
+</div>
 </body>
 </html>
