--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
 
       <div class="grid two">
         <div class="card">
-          <h3>聯絡資訊（可查）</h3>
-          <p>品牌：馥靈之鑰® Hour Light</p>
+          <h3>聯絡資訊</h3>
+          <p>馥靈之鑰 Hour Light</p>
           <p>LINE：<a data-line>https://line.me/ti/p/ExZKz8O2eh</a></p>
           <p>Email：<a href="mailto:judyanee@gmail.com">judyanee@gmail.com</a></p>
           <p>電話：<a href="tel:+886905723595">0905-723-595</a></p>
-          <p>地址：桃園市桃園區同安街666號｜高雄市前鎮區瑞祥街1巷35號</p>
+          <p>地址：桃園市桃園區中正路1095號10樓</p>
         </div>
         <div class="card">
           <h3>常見疑問（直球回答）</h3>
