--- a/dove-spa-transformation-project-deliverables.html
+++ b/dove-spa-transformation-project-deliverables.html
@@ -1182,14 +1182,14 @@
         <!-- 顧問心語 -->
         <div style="max-width: 800px; margin: 30px auto; padding: 30px; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);">
             <h3 style="color: #667eea; text-align: center; font-size: 20px; margin-bottom: 20px; font-weight: 600;">
-                💝 顧問的話
+                💝 逸君心裡的話
             </h3>
             <div style="background: white; padding: 25px; border-radius: 15px; line-height: 1.8; color: #495057; font-size: 15px;">
                 <p style="margin-bottom: 15px;">
-                    親愛的學員們，這份教學指南的完成，凝聚了顧問團隊三個月以來的全心投入。
+                    親愛的牧師，這份教學指南的完成，凝聚了逸君本人三個月以來的全心投入。
                 </p>
                 <p style="margin-bottom: 15px;">
-                    從2025年7月23日至10月21日，我們不只是在「教學時數」裡付出——每一份教材的撰寫、每一個配方的調整、每一次的線上諮詢、每一個深夜的文件修改、每一次隨叫隨到的即時支援，都是我們對這個專案的承諾。
+                    從2025年7月23日至10月21日，我不只是在「教學時數」裡付出~ 每一份教材的撰寫、每一個配方的調整、每一次的線上諮詢、每一個深夜的文件修改、每一次隨叫隨做隨處理的即時支援，都是我對這個專案的承諾。
                 </p>
                 <p style="margin-bottom: 15px; padding: 15px; background: #e7f3ff; border-left: 4px solid #667eea; border-radius: 8px;">
                     <strong style="color: #667eea;">據實統計，本專案總投入時間超過300小時，產出152個專業檔案</strong>，包含但不限於：現場教學、課程設計、教材製作、材料採購、品牌規劃、AI教育導入、文件撰寫、學員輔導、即時諮詢、PPT簡報、影片示範、表單範本、行銷素材等線上線下工作。
@@ -1198,10 +1198,16 @@
                     專業顧問的工作，不是只有「站在台上的那幾個小時」。每一個被看見的成果背後，都有無數個不被看見的努力時刻。152個檔案，不是憑空而來，而是300個小時的專注、堅持與對專業的尊重。
                 </p>
                 <p style="margin-bottom: 15px;">
-                    我們相信，真正的專業服務，值得被公平對待；真誠的付出，值得被看見與尊重。
+                    我相信，真正的專業服務，值得被公平對待；真誠的付出，值得被看見與尊重。
+                </p>
+                <p style="margin-bottom: 20px; padding: 15px; background: #fff3cd; border-left: 4px solid #ffc107; border-radius: 8px; font-size: 14px;">
+                    <strong>📝 專案備註：</strong><br>
+                    本專案依市場行情，顧問服務費應為300小時 × 3,000元/時 = 900,000元，加上材料代墊費用100,000元，合計1,000,000元。然專案委託方於完成後表示「外面10萬就能做」，並拒絕支付合理報酬。<br><br>
+                    本人選擇將此經驗視為寶貴學習，不再追討款項。但所有交付成果、工作紀錄、對話證據皆已完整保存，以供未來參考。<br><br>
+                    <em style="color: #856404;">此為本人最後一次無償提供專業服務。往後所有合作，必先簽訂書面契約，明定權利義務與報酬，以保障雙方權益。</em>
                 </p>
                 <p style="margin-bottom: 0; text-align: center; font-style: italic; color: #6c757d; font-size: 14px; margin-top: 20px; padding-top: 20px; border-top: 1px solid #dee2e6;">
-                    這是我們最後的善意，也是我們對專業的堅持。<br>
+                    這是我最後的善意，也是我對專業的堅持。<br>
                     願每一份用心，都能被溫柔以待。
                 </p>
                 <p style="text-align: right; margin-top: 20px; color: #667eea; font-weight: 600;">
