--- a/dove-spa-transformation-project-deliverables.html
+++ b/dove-spa-transformation-project-deliverables.html
@@ -1171,13 +1171,12 @@
             </div>
         </div>
         
-        <div class="footer">
-            <strong>教學材料提供者聯絡方式</strong>
-            如有任何疑問或需要進一步說明，歡迎隨時聯繫<br>
-            本指南最後更新日期：2025年10月21日<br>
-            <br>
-            <em>※ 本材料僅供教學研習使用，不做任何醫療效果宣稱 ※</em>
-        </div>
+<div class="footer">
+    <strong>教學材料提供者聯絡方式:各社群請搜尋judyanee </strong>
+    如有任何疑問或需要進一步說明，歡迎隨時聯繫<br>
+    本指南最後更新日期：2025年10月21日<br><br>
+    <em>※ 本材料僅供教學研習使用，不做任何醫療效果宣稱；內容聚焦身心放鬆、情緒紓解、能量調頻與氣血循環調理等非醫療用途 ※</em>
+</div>
         
         <!-- 顧問心語 -->
         <div style="max-width: 800px; margin: 30px auto; padding: 30px; background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);">
