--- a/dove-spa-transformation-project-deliverables.html
+++ b/dove-spa-transformation-project-deliverables.html
@@ -276,7 +276,7 @@
         <!-- 產品1：複方按摩調理油（教學基礎配方） -->
         <div class="product">
             <div class="product-header">
-                <img src="https://via.placeholder.com/120?text=照片1" alt="複方按摩調理油" class="product-image">
+                <img src="0001.png" alt="複方按摩調理油" class="product-image">
                 <div class="product-title">
                     <h2>複方按摩調理油（教學基礎配方）</h2>
                     <span class="tag">教學用油｜共3瓶｜500ml/瓶</span>
@@ -338,7 +338,7 @@
         <!-- 產品2：臉部卸妝按摩調理油 -->
         <div class="product">
             <div class="product-header">
-                <img src="https://via.placeholder.com/120?text=照片2" alt="臉部卸妝按摩調理油" class="product-image">
+                <img src="0002.png" alt="臉部卸妝按摩調理油" class="product-image">
                 <div class="product-title">
                     <h2>臉部卸妝按摩調理油</h2>
                     <span class="tag">教學用油｜共3瓶｜100ml/瓶</span>
@@ -430,7 +430,7 @@
         <!-- 產品3：胸腹按摩調理油 -->
         <div class="product">
             <div class="product-header">
-                <img src="https://via.placeholder.com/120?text=照片3" alt="胸腹按摩調理油" class="product-image">
+                <img src="0003.png" alt="胸腹按摩調理油" class="product-image">
                 <div class="product-title">
                     <h2>胸腹按摩調理油（教學基礎配方）</h2>
                     <span class="tag">教學用油｜500ml×1瓶 + 250ml×1瓶</span>
@@ -523,7 +523,7 @@
         <!-- 產品4：頭皮養護調理油 -->
         <div class="product">
             <div class="product-header">
-                <img src="https://via.placeholder.com/120?text=照片4" alt="頭皮養護調理油" class="product-image">
+                <img src="0004.png" alt="頭皮養護調理油" class="product-image">
                 <div class="product-title">
                     <h2>頭皮養護調理油（教學基礎配方）</h2>
                     <span class="tag">教學用油｜200ml×3瓶 + 50ml×3瓶</span>
@@ -621,7 +621,7 @@
         <!-- 產品5：外泌體修護安瓶 -->
         <div class="product">
             <div class="product-header">
-                <img src="https://via.placeholder.com/120?text=照片5" alt="外泌體修護安瓶" class="product-image">
+                <img src="0005.png" alt="外泌體修護安瓶" class="product-image">
                 <div class="product-title">
                     <h2>Modilansa 外泌體修護安瓶</h2>
                     <span class="tag">合法品牌產品｜2.5ml×30支</span>
@@ -739,7 +739,7 @@
         <!-- 產品6：天然蜂蠟耳燭 -->
         <div class="product">
             <div class="product-header">
-                <img src="https://via.placeholder.com/120?text=照片6" alt="天然蜂蠟耳燭" class="product-image">
+                <img src="0006.png" alt="天然蜂蠟耳燭" class="product-image">
                 <div class="product-title">
                     <h2>天然蜂蠟耳燭（教學示範用）</h2>
                     <span class="tag">教學用品｜共200支</span>
@@ -878,7 +878,7 @@
         <!-- 產品7：美容照護工具隨身組 -->
         <div class="product">
             <div class="product-header">
-                <img src="https://via.placeholder.com/120?text=照片7" alt="美容照護工具隨身組" class="product-image">
+                <img src="0007.png" alt="美容照護工具隨身組" class="product-image">
                 <div class="product-title">
                     <h2>美容照護工具隨身組（教學示範用）</h2>
                     <span class="tag">教學工具｜共20組</span>
