--- a/dove-spa-transformation-project-deliverables.html
+++ b/dove-spa-transformation-project-deliverables.html
@@ -618,12 +618,12 @@
             </div>
         </div>
 
-        <!-- 產品5：外泌體修護安瓶 -->
+        <!-- 產品5：外泌體玻色因安瓶 -->
         <div class="product">
             <div class="product-header">
-                <img src="0005.png" alt="外泌體修護安瓶" class="product-image">
+                <img src="https://pic.vcp.tw/upload/mt1321/dynamic_layout_content_img/dlc_698_pic12_3594.jpg?1708503153" alt="外泌體玻色因安瓶" class="product-image">
                 <div class="product-title">
-                    <h2>Modilansa 外泌體修護安瓶</h2>
+                    <h2>外泌體玻色因安瓶</h2>
                     <span class="tag">合法品牌產品｜2.5ml×30支</span>
                 </div>
             </div>
@@ -631,7 +631,7 @@
             <div style="background: #e7f3ff; border-left: 5px solid #667eea; padding: 20px; margin-bottom: 20px; border-radius: 8px;">
                 <h3 style="color: #667eea; margin-bottom: 10px; font-size: 16px;">📌 產品說明</h3>
                 <p style="font-size: 14px; color: #004085; line-height: 1.6; margin-bottom: 8px;">
-                    <strong>品名：</strong>Modilansa Exosome Repair Youth Serum（外泌體修復青春精華）
+                    <strong>品名：</strong>Exosome Repair Youth Serum（外泌體修復青春精華）
                 </p>
                 <p style="font-size: 14px; color: #004085; line-height: 1.6; margin-bottom: 8px;">
                     <strong>規格：</strong>單支2.5ml，共30支獨立包裝安瓶
@@ -1078,13 +1078,13 @@
                 <!-- 震撼數字展示 -->
                 <div style="background: rgba(255,255,255,0.2); padding: 25px; border-radius: 15px; margin-bottom: 25px; text-align: center; backdrop-filter: blur(10px);">
                     <div style="font-size: 72px; font-weight: 800; color: #ffd700; text-shadow: 0 4px 10px rgba(0,0,0,0.3); line-height: 1; margin-bottom: 10px;">
-                        152
+                        153
                     </div>
                     <div style="font-size: 20px; font-weight: 600; color: white; margin-bottom: 5px;">
                         個專業檔案
                     </div>
                     <div style="font-size: 14px; color: white; opacity: 0.95; line-height: 1.6;">
-                        三個月，300+小時，152個檔案<br>
+                        三個月，300+小時，153個檔案<br>
                         每一個都是不被看見的努力，每一個都值得被尊重
                     </div>
                 </div>
@@ -1143,7 +1143,7 @@
                     <a href="https://drive.google.com/drive/folders/1XVbPcvsqlH5c4_vHwme2Tmy3EjgfEUBi?usp=sharing" 
                        target="_blank" 
                        style="display: inline-block; background: white; color: #667eea; padding: 18px 50px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 6px 20px rgba(0,0,0,0.25); transition: all 0.3s ease;">
-                        📥 點擊下載完整專案文件（152個檔案）
+                        📥 點擊下載完整專案文件（153個檔案）
                     </a>
                     <p style="color: white; font-size: 13px; margin-top: 15px; opacity: 0.95; line-height: 1.6;">
                         所有檔案皆為顧問三個月工作期間的實際產出<br>
@@ -1170,10 +1170,10 @@
                     親愛的牧師，這份教學指南的完成，凝聚了逸君本人三個月以來的全心投入。
                 </p>
                 <p style="margin-bottom: 15px;">
-                    從2025年7月23日至10月21日，我不只是在「教學時數」裡付出~ 每一份教材的撰寫、每一個配方的調整、每一次的線上諮詢、每一個深夜的文件修改、每一次隨叫隨做隨處理的即時支援，都是我對這個專案的承諾。
+                    從2025年7月23日至10月13日，我不只是在「教學時數」裡付出~ 每一份教材的撰寫、每一個配方的調整、每一次的線上諮詢、每一個深夜的文件修改、每一次隨叫隨做隨處理的即時支援，都是我對這個專案的承諾。
                 </p>
                 <p style="margin-bottom: 15px; padding: 15px; background: #e7f3ff; border-left: 4px solid #667eea; border-radius: 8px;">
-                    <strong style="color: #667eea;">據實統計，本專案總投入時間超過300小時，產出152個專業檔案</strong>，包含但不限於：現場教學、課程設計、教材製作、材料採購、品牌規劃、AI教育導入、文件撰寫、學員輔導、即時諮詢、PPT簡報、影片示範、表單範本、行銷素材等線上線下工作。
+                    <strong style="color: #667eea;">據實統計，本專案總投入時間超過300小時，產出153個專業檔案</strong>，包含但不限於：現場教學、課程設計、教材製作、材料採購、品牌規劃、AI教育導入、文件撰寫、學員輔導、即時諮詢、PPT簡報、影片示範、表單範本、行銷素材等線上線下工作。
                 </p>
                 <p style="margin-bottom: 15px;">
                     專業顧問的工作，不是只有「站在台上的那幾個小時」。每一個被看見的成果背後，都有無數個不被看見的努力時刻。152個檔案，不是憑空而來，而是300個小時的專注、堅持與對專業的尊重。
@@ -1183,7 +1183,7 @@
                 </p>
                 <p style="margin-bottom: 20px; padding: 15px; background: #fff3cd; border-left: 4px solid #ffc107; border-radius: 8px; font-size: 14px;">
                     <strong>📝 專案備註：</strong><br>
-                    本專案依市場行情，顧問服務費應為300小時 × 3,000元/時 = 900,000元，加上材料代墊費用100,000元，合計1,000,000元。然專案委託方於完成後表示「外面10萬就能做」，並拒絕支付合理報酬。<br><br>
+                    本專案依市場行情，顧問服務費應為300小時以上。然專案委託方於完成後表示「外面10萬就能做」，並拒絕支付合理報酬。<br><br>
                     本人選擇將此經驗視為寶貴學習，不再追討款項。但所有交付成果、工作紀錄、對話證據皆已完整保存，以供未來參考。<br><br>
                     <em style="color: #856404;">此為本人最後一次無償提供專業服務。往後所有合作，必先簽訂書面契約，明定權利義務與報酬，以保障雙方權益。</em>
                 </p>
@@ -1192,7 +1192,7 @@
                     願每一份用心，都能被溫柔以待。
                 </p>
                 <p style="text-align: right; margin-top: 20px; color: #667eea; font-weight: 600;">
-                    ── 顧問 王逸君（相勻）｜2025.10.21
+                    ── 講師級顧問 王逸君｜2025.10.21
                 </p>
             </div>
         </div>
