--- a/dove-spa-transformation-project-deliverables.html
+++ b/dove-spa-transformation-project-deliverables.html
@@ -1091,7 +1091,7 @@
                 
                 <div style="background: white; padding: 25px; border-radius: 15px; margin-bottom: 20px;">
                     <h3 style="color: #667eea; font-size: 18px; margin-bottom: 15px; font-weight: 600;">
-                        📋 主要交付項目（含12份核心文件及140份支援檔案）
+                        📋 主要交付項目（含12份核心文件及支援檔案）
                     </h3>
                     <div style="display: grid; gap: 10px; margin-bottom: 20px;">
                         <div style="padding: 10px 15px; background: #f8f9fa; border-radius: 8px; border-left: 4px solid #667eea; font-size: 14px; color: #495057;">
@@ -1176,16 +1176,16 @@
                     <strong style="color: #667eea;">據實統計，本專案總投入時間超過300小時，產出153個專業檔案</strong>，包含但不限於：現場教學、課程設計、教材製作、材料採購、品牌規劃、AI教育導入、文件撰寫、學員輔導、即時諮詢、PPT簡報、影片示範、表單範本、行銷素材等線上線下工作。
                 </p>
                 <p style="margin-bottom: 15px;">
-                    專業顧問的工作，不是只有「站在台上的那幾個小時」。每一個被看見的成果背後，都有無數個不被看見的努力時刻。152個檔案，不是憑空而來，而是300個小時的專注、堅持與對專業的尊重。
+                    專業顧問的工作，不是只有「站在台上的那幾個小時」。每一個被看見的成果背後，都有無數個不被看見的努力時刻。153個檔案，不是憑空而來，而是300個多小時的專注、堅持與對專業的尊重。
                 </p>
                 <p style="margin-bottom: 15px;">
                     我相信，真正的專業服務，值得被公平對待；真誠的付出，值得被看見與尊重。
                 </p>
                 <p style="margin-bottom: 20px; padding: 15px; background: #fff3cd; border-left: 4px solid #ffc107; border-radius: 8px; font-size: 14px;">
                     <strong>📝 專案備註：</strong><br>
-                    本專案依市場行情，顧問服務費應為300小時以上。然專案委託方於完成後表示「外面10萬就能做」，並拒絕支付合理報酬。<br><br>
-                    本人選擇將此經驗視為寶貴學習，不再追討款項。但所有交付成果、工作紀錄、對話證據皆已完整保存，以供未來參考。<br><br>
-                    <em style="color: #856404;">此為本人最後一次無償提供專業服務。往後所有合作，必先簽訂書面契約，明定權利義務與報酬，以保障雙方權益。</em>
+                    本專案依市場行情，顧問服務費應為300小時以上。然專案委託方於完成後表示「外面10萬就能做」，並不願支付合理報酬。<br><br>
+                    本人選擇將此經驗視為寶貴學習。但所有交付成果、工作紀錄、對話證據皆已完整保存，以供未來參考。<br><br>
+                    <em style="color: #856404;">此為本人最後一次廉價提供專業服務。往後所有合作，必先簽訂書面契約，明定權利義務與報酬，以保障雙方權益。</em>
                 </p>
                 <p style="margin-bottom: 0; text-align: center; font-style: italic; color: #6c757d; font-size: 14px; margin-top: 20px; padding-top: 20px; border-top: 1px solid #dee2e6;">
                     這是我最後的善意，也是我對專業的堅持。<br>
